fixed the language selection having extra margin

--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -103,6 +103,10 @@ section {
   margin: auto 4px;  
 }
 
+#language-en {
+  margin-right: 0;
+}
+
 #navigation .link-bg {
   height: 60px;
   float: left;
